--- a/src/components/Select.css
+++ b/src/components/Select.css
@@ -3,6 +3,7 @@
 	font-family: Arial, Helvetica, sans-serif;
 	flex-direction: row;
 	align-items: center;
+	padding-bottom: 15px;
 }
 
 .select__text {
@@ -12,6 +13,7 @@ color: white;
 padding: 15px;
 align-self: center;
 border-radius: 10px;
+width: 170px;
 }
 
 .select__container {
@@ -23,6 +25,6 @@ border-radius: 10px;
 	cursor: pointer;
 }
 
-.select__option  {
+.select__text-input  {
 
 }
