Добавлена логика выделения выбранного элемента в компоненте Radio

--- a/src/components/Radio.css
+++ b/src/components/Radio.css
@@ -31,3 +31,7 @@ flex-direction: column;
     cursor: pointer;
     margin: 5px 0 5px 0;
 }
+
+.radio__input-text_active {
+    font-weight: 600;
+}
