--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -29,13 +29,16 @@ background: aliceblue;
 
 .table tr {
     cursor: pointer;
-    /* border: 1px solid #005bff;
-    border-collapse: collapse; */
+
+}
+
+.tr_active {
+	background: white;
+	outline: 2px solid #005bff;
 }
 
 .table td, .table th {
     padding: 5px 0 5px 30px;
-
 }
 
 .table thead {
