--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -3,6 +3,7 @@
 	font-family: Arial, Helvetica, sans-serif;
     border-top: 1px solid #005bff;
 	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
 .table__text {
